--- a/riak-kv/Dockerfile
+++ b/riak-kv/Dockerfile
@@ -4,9 +4,9 @@
 FROM basho/riak-kv
 MAINTAINER Dave Gunawan "david.gunawan@bestbuy.com"
 
+RUN chown -R riak:riak /etc/riak
+
 # Expose protocol buffers and HTTPS
 EXPOSE 8087 8098
-
-CMD /usr/lib/riak/riak-cluster.sh
 
 USER riak
